--- a/morph_parse.ipynb
+++ b/morph_parse.ipynb
@@ -69,6 +69,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
+    "\n",
     "processed_data = []\n",
     "\n",
     "for entry in data:\n",
