add parse tuples

--- a/morph_parse.ipynb
+++ b/morph_parse.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,17 +35,15 @@
     "    \n",
     "    parsed_text = []\n",
     "    \n",
-    "    for word in ana:\n",
-    "        parsed_word = {}\n",
-    "        \n",
-    "        parsed_word['token'] = word['text']\n",
+    "    for word in ana:      \n",
+    "        token = word['text']\n",
     "        \n",
     "        if 'analysis' in word:\n",
     "            gr = word['analysis'][0]['gr']\n",
     "            pos = gr.split('=')[0].split(',')[0]\n",
-    "            parsed_word['POS'] = pos\n",
-    "            parsed_word['lemma'] = word['analysis'][0]['lex']\n",
+    "            lemma = word['analysis'][0]['lex']\n",
     "        \n",
+    "        parsed_word = token, pos, lemma\n",
     "        parsed_text.append(parsed_word)\n",
     "        \n",
     "    processed_entry = title, parsed_text\n",
