--- a/morph_parse.ipynb
+++ b/morph_parse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,15 +35,18 @@
     "    \n",
     "    parsed_text = []\n",
     "    \n",
-    "    for word in ana:      \n",
+    "    for word in ana:\n",
     "        token = word['text']\n",
     "        \n",
-    "        if 'analysis' in word:\n",
+    "        if 'analysis' in word and word['analysis']:\n",
     "            gr = word['analysis'][0]['gr']\n",
     "            pos = gr.split('=')[0].split(',')[0]\n",
     "            lemma = word['analysis'][0]['lex']\n",
+    "            parsed_word = token, pos, lemma\n",
     "        \n",
-    "        parsed_word = token, pos, lemma\n",
+    "        else:\n",
+    "            parsed_word = tuple([token])\n",
+    "\n",
     "        parsed_text.append(parsed_word)\n",
     "        \n",
     "    processed_entry = title, parsed_text\n",
@@ -53,8 +56,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "with open('data.json', encoding='utf-8') as f:\n",
@@ -63,9 +68,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 27,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 7.57 s, sys: 2.16 s, total: 9.73 s\n",
+      "Wall time: 2min 6s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "\n",
@@ -78,8 +94,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
+   "execution_count": 28,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "with open('processed_data.json', 'w', encoding='utf-8') as f:\n",
@@ -120,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
